# fast-api-boilerplate-project

./: CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.conf
.github/workflows/: pull_request.yml
src/model/: base_model.py
