[tool.poetry]
name = "fast-api-boilerplate-project"
version = "0.1.0"
description = "it's a simple and useful boilerplate for python projects using fast api framework"
authors = ["Authors Name <authorsmail@>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = "0.27.0.post1"

[tool.poetry.dev-dependencies]
pytest = "8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
httpx = "0.26.0"

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["src",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "run.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "S"]
target-version = "py311"
exclude = ["run.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
